# docstring_generator_ext

./: .gitignore  .gitmodules  README.md  setup.py
.github/workflows/: python-publish-ext.yml
src/: CMakeLists.txt  docstringFormat.cpp
